syntax = "proto3";

package holms.types.folio;
option csharp_namespace = "HOLMS.Types.Folio";

import "folio/tax_fee.proto";
import "primitive/monetary_amount.proto";

message TaxAssessment {
	holms.types.folio.TaxFee tax = 1;
	holms.types.primitive.MonetaryAmount assessed_tax_amount = 2;
}
