syntax = "proto3";

package holms.types.folio;
option csharp_namespace = "HOLMS.Types.Folio";
option go_package = "folio";

import "primitive/monetary_amount.proto";
import "folio/tax_fee_quote.proto";
import "folio/taxed_reservation_nightly_quote.proto";
import "folio/taxed_incidental_reservation_nightly_quote.proto";
import "booking/indicators/reservation_indicator.proto";

message TaxedReservationQuote {
	repeated holms.types.folio.TaxedReservationNightlyQuote lodging_quotes = 1;
	repeated holms.types.folio.TaxedIncidentalReservationNightlyQuote incidental_quotes = 2;
	holms.types.primitive.MonetaryAmount lodging_price_subtotal = 3;
	holms.types.primitive.MonetaryAmount incidental_price_subtotal = 4;
	repeated holms.types.folio.TaxFeeQuote tax_fee_totals = 5;
	holms.types.booking.indicators.ReservationIndicator reservation = 6;
}